# ChurnShield-AI

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  LICENSE  Makefile  PROJECT_SUMMARY.md  Procfile.frontend  README.md  docker-compose.yml  nixpacks.toml  predictions.db  pyproject.toml  render.yaml  requirements.txt  sample_customers.csv  train_model.py
.github/workflows/: ci.yml
.streamlit/: config.toml
config/: __init__.py  settings.py
frontend/: .gitignore  package-lock.json  package.json
frontend/app/: layout.js  page.js
nginx/: nginx.conf
scripts/: run_api.py  run_frontend.py  train_model.py
src/: __init__.py  api.py  churn_model.joblib  database.py  load_data.py  model.py
src/api/: __init__.py  auth.py  database.py  main.py  models.py
src/api/routes/: __init__.py  analytics.py  auth.py  predictions.py
src/frontend/: __init__.py  app.py
src/frontend/components/: charts.py  styles.py
src/ml/: __init__.py  model.py  predictor.py  preprocessing.py  train.py
src/utils/: __init__.py
tests/: __init__.py  test_api.py  test_model.py  test_preprocessing.py
